--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -10,7 +10,7 @@
             <div class="col-md-11">
                 <h1 class="inset-text-grey">About</h1>
                 
-                <p class="lead">LibCrowds, in association with BL Labs, is a crowd-sourcing experiment focused on
+                <p class="lead">{{brand}}, in association with BL Labs, is a crowd-sourcing experiment focused on
                 making important research materials held at the British Library more readily available to a wider audience.</p> 
             </div>
         </div>
@@ -42,9 +42,13 @@
                 <h2>{{ _('Technology') }}</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
-                crowd-sourcing projects. Individual projects are primarily written in HTML and Javascript. The {{brand}} 
-                <a href="http://docs.pybossa.com/">theme</a> and <a href="http://docs.pybossa.com/">plugin</a>, which handles certain {{brand}} 
-                specific features, are also open-source and suggestions or contributions are welcome.</p>
+                crowd-sourcing projects. To complement the PyBossa framework, a custom Flask
+                <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugin</a>is used to handle certain {{brand}} specific
+                features. The {{brand}} <a href="https://github.com/alexandermendes/BL-pybossa-theme" target="_blank">theme</a> is written primarily
+                in HTML5, CSS3 and JavaScript, as are the individual crowd-sourcing projects. Both the 
+                <a href="https://github.com/alexandermendes/BL-pybossa-theme" target="_blank">theme</a> and
+                <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugin</a> are open-source and any
+                suggestions or contributions are welcome.</p>
             
                 <div class="col-sm-6 col-sm-offset-3 col-xs-12 padding-top-sm">
                   <div class="col-xs-4"><img src="{{url_for('static',filename='img/html-logo.png')}}" class="img-responsive web-badge"></div>
