About text updated

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -10,8 +10,10 @@
             <div class="col-md-11">
                 <h1 class="inset-text-grey">About</h1>
                 
-                <p class="lead">{{brand}}, in association with BL Labs, is a crowd-sourcing experiment focused on
-                making important research materials held at the British Library more readily available to a wider audience.</p> 
+                <p class="lead">{{brand}}, in association with BL Labs, is an experimental crowd-sourcing platform focused on
+                making important research materials held at the British Library more readily available
+                to a wider audience. By participating you will have a direct impact on future research
+                conducted using these diverse collections.</p> 
             </div>
         </div>
     </section>
