--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -26,9 +26,10 @@
          <div class="col-sm-offset-2 col-sm-8">
           <h2 class="inset-text-grey">What's this all about?</h2>
             <p class="lead">
-               {{ brand }} is a crowd-sourcing platform focused on making important research materials
-               more readily available to a wider audience. By participating you will have a direct impact 
-               on future research conducted using the diverse collections held at the British Library.
+               {{brand}}, in association with BL Labs, is an experimental crowd-sourcing platform focused on
+                making important research materials held at the British Library more readily available
+                to a wider audience. By participating you will have a direct impact on future research
+                conducted using these diverse collections.
             </p>
             <a href="{{ url_for('home.about')}}" class="btn btn-default">Find Out More</a>
          </div>
