--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -26,10 +26,10 @@
          <div class="col-sm-offset-2 col-sm-8">
           <h2 class="inset-text-grey">What's this all about?</h2>
             <p class="lead">
-               {{brand}}, in association with BL Labs, is an experimental crowd-sourcing platform focused on
-                making important research materials held at the British Library more readily available
-                to a wider audience. By participating you will have a direct impact on future research
-                conducted using these diverse collections.
+               {{brand}}, in association with <a href="http://labs.bl.uk/">BL Labs</a>, is a platform for hosting experimental crowd-sourcing projects aimed at
+                making the diverse collections held at the British Library more readily available to a wider audience.
+                Your participation will have a direct impact on enabling future research
+                at the Library.
             </p>
             <a href="{{ url_for('home.about')}}" class="btn btn-default">Find Out More</a>
          </div>
