--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -10,19 +10,19 @@
             <div class="col-md-11">
                 <h1 class="inset-text-grey">About</h1>
                 
-                <p class="lead">{{brand}}, in association with BL Labs, is an experimental crowd-sourcing platform focused on
-                making important research materials held at the British Library more readily available
-                to a wider audience. By participating you will have a direct impact on future research
-                conducted using these diverse collections.</p> 
+                <p class="lead">{{brand}}, in association with <a href="http://labs.bl.uk/">BL Labs</a>, is a platform for hosting experimental crowd-sourcing projects aimed at
+                making the diverse collections held at the <a href="http://www.bl.uk">British Library</a> more readily available
+                to a wider audience. By participating in the projects here, you will have a direct impact on enabling future research
+                at the Library.</p> 
             </div>
         </div>
     </section>
     <section class="white">
         <div class="container container-padded">
             <div class="col-md-11 padding-bottom-sm">
-                <h2>Current Project: Convert-a-Card</h2>
+                <h2>Featured Project: Convert-a-Card</h2>
 			
-                <p>In our first project series, Convert-a-Card, we're focusing on liberating collection items currently only discoverable onsite, through our physical card catalogues. </p>
+                In our first project series, Convert-a-Card, we're experimenting with a new method for transforming printed card catalogues into electronic records for inclusion in our online catalogue <a href="http://explore.bl.uk/">Explore</a>.</p>
                 
                 <p>While the <a href="http://www.bl.uk/aboutus/quickinfo/facts/history/" target="_blank">British Library</a> is relatively young for a national library, 
                 much of its vast historical collections were acquired long before computers were used for cataloguing as standard. So, while the library's online catalogue, 
@@ -33,7 +33,7 @@
                 <a href="http://explore.bl.uk/" target="_blank">British Library's Explore catalogue</a> for anyone to search online. By participating you will have a direct impact
                 on the availability of research material to anyone interested in the diverse collections available at the British Library. </p>
                 
-                <p>Let's <a href="{{ url_for('project.index') }}">get started</a>!</p>
+                <p><a href="http://www.libcrowds.com/project/category/convert-a-card/">Let's get started</a>!</p>
             </div>
         </div>
     </section>
