--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -10,10 +10,11 @@
             <div class="col-md-11">
                 <h1 class="inset-text-grey">About</h1>
                 
-                <p class="lead">{{brand}}, in association with <a href="http://labs.bl.uk/">BL Labs</a>, is a platform for hosting experimental crowd-sourcing projects aimed at
-                making the diverse collections held at the <a href="http://www.bl.uk">British Library</a> more readily available
-                to a wider audience. By participating in the projects here, you will have a direct impact on enabling future research
-                at the Library.</p> 
+                <p class="lead">{{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>, 
+                is a platform for hosting experimental crowd-sourcing projects aimed at making the diverse collections 
+                held at the <a href="http://www.bl.uk" target="_blank">British Library</a> more readily available
+                to a wider audience. By participating in the projects here, you will have a direct impact on 
+                enabling future research at the Library.</p> 
             </div>
         </div>
     </section>
