Fixed leaderboard display for when tasks are deleted
Check that rank and score are greater than zero before displaying on
the leaderboard

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -27,18 +27,20 @@
                             </thead>
                             <tbody>
                             {% for user in top_users %}
-                            {% if user.fullname == current_user.fullname and user.rank > 0 %}
-                                <tr class="success">
-                                    <td class="text-center"><strong>{{user.rank}}</strong></td>
-                                    <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
-                                    <td class="text-center"><strong>{{user.score}}</strong></td>
-                                </tr> 
-                            {% else %}
-                                <tr>
-                                    <td class="text-center">{{user.rank}}</td>
-                                    <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
-                                    <td class="text-center">{{user.score}}</td>
-                                </tr> 
+                            {% if user.score|int > 0 and user.rank|int > 0 %} 
+                                {% if user.fullname == current_user.fullname %}
+                                    <tr class="success">
+                                        <td class="text-center"><strong>{{user.rank}}</strong></td>
+                                        <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
+                                        <td class="text-center"><strong>{{user.score}}</strong></td>
+                                    </tr> 
+                                {% else %}
+                                    <tr>
+                                        <td class="text-center">{{user.rank}}</td>
+                                        <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
+                                        <td class="text-center">{{user.score}}</td>
+                                    </tr> 
+                                {%endif%}
                             {%endif%}
                             {% endfor %}
                             </tbody>
