--- a/templates/projects/export.html
+++ b/templates/projects/export.html
@@ -22,7 +22,7 @@
                                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='csv')}}" rel="nofollow">
                                         <div class="well">
                                             <i class="fa fa-file-excel-o fa-4x"></i> 
-                                            <h3  class="margin-bottom-xs">{{_('Tasks (CSV)')}}</h3>
+                                            <h3  class="margin-bottom-xs">{{_('Tasks')}}</h3>
                                         </div>
                                     </a>
                                 </div>
@@ -30,7 +30,7 @@
                                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='csv')}}" rel="nofollow">
                                         <div class="well">
                                             <i class="fa fa-file-excel-o fa-4x"></i> 
-                                            <h3  class="margin-bottom-xs">{{_('Contributions (CSV)')}}</h3>
+                                            <h3  class="margin-bottom-xs">{{_('Contributions')}}</h3>
                                         </div>
                                     </a>
                                 </div>
@@ -42,7 +42,7 @@
                                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='json')}}" rel="nofollow">
                                         <div class="well">
                                             <i class="fa fa-code fa-4x"></i> 
-                                            <h3  class="margin-bottom-xs">{{_('Tasks (JSON)')}}</h3>
+                                            <h3  class="margin-bottom-xs">{{_('Tasks')}}</h3>
                                         </div>
                                     </a>
                                 </div>
@@ -50,7 +50,7 @@
                                     <a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='json')}}" rel="nofollow">
                                         <div class="well">
                                             <i class="fa fa-code fa-4x"></i> 
-                                            <h3  class="margin-bottom-xs">{{_('Contributions (JSON)')}}</h3>
+                                            <h3  class="margin-bottom-xs">{{_('Contributions')}}</h3>
                                         </div>
                                     </a>
                                 </div>
@@ -62,7 +62,7 @@
                                     <a href="{{ url_for('blplugin.export_formatted', short_name=project.short_name) }}" rel="nofollow">
                                         <div class="well">
                                             <i class="fa fa-code fa-4x"></i> 
-                                            <h3  class="margin-bottom-xs">{{_('Contributions (JSON)')}}</h3>
+                                            <h3  class="margin-bottom-xs">{{_('Contributions')}}</h3>
                                         </div>
                                     </a>
                                 </div>
