--- a/templates/account/open_project.html
+++ b/templates/account/open_project.html
@@ -28,8 +28,8 @@
                          <thead>
                              <tr>
                                  <th>Title</th>
+                                 <th>Category</th>
                                  <th>Created</th>
-                                 <th>Action</th>
                              </tr>
                          </thead>
                          {% for project in all_projects %}
