Bug fix for Safari

--- a/templates/projects/snippets/cards.html
+++ b/templates/projects/snippets/cards.html
@@ -93,7 +93,7 @@
 <label for="shelfmark_field" class="control-label">Shelf Mark:</label>
     <input type="text" id="shelfmark_field" class="form-control" placeholder="Enter shelf mark" required/>
 </div>
-	<button class="btn btn-success btn-answer pull-right" value="Done"><i class="fa fa-thumbs-o-up"></i> <span id="i18n_done">Done</span></button>
+	<a href="#" class="btn btn-success btn-answer pull-right" value="Done"><i class="fa fa-thumbs-o-up"></i> Done</a>
 </form>
 
         <!-- Feedback items for the user -->
